// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render table correctly 1`] = `
.c3 {
  background-color: #fbfbfd;
  color: #283040;
  font-weight: bold;
  height: 56px;
  padding: 0.5rem 0.75rem;
  border: none;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c3::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: -1px;
  width: 30px;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5 {
  background-color: #ffffff;
  height: 56px;
  padding: 0.5rem 0.75rem;
  border: none;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: -1px;
  width: 30px;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2 {
  border-top: none;
}

.c2:last-child > .c4 {
  border-bottom: none;
}

.c1 {
  display: table;
  width: 100%;
  margin-bottom: 1px;
  overflow: auto;
  border-spacing: 0;
  border-collapse: separate;
  border-style: hidden;
  background-color: #ffffff;
  font-size: 1rem;
}

.c1 > tbody > tr:hover > td {
  background-color: #f6f8fb;
}

.c0 {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: auto;
  border-radius: 1rem;
  background-color: #ffffff;
  box-shadow: 0 2px 4px 0 #C4CFDD;
  width: 100%;
  text-align: center;
}

<div
  class="c0"
  width="100%"
>
  <table
    class="c1"
  >
    <thead>
      <tr
        class="c2"
      >
        <th
          class="c3"
        >
          Name
        </th>
        <th
          class="c3"
        >
          Platform
        </th>
        <th
          class="c3"
        >
          People
        </th>
        <th
          class="c3"
        >
          Ammount
        </th>
        <th
          class="c3"
        >
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="c2"
      >
        <td
          class="c4 c5"
        >
          Name 
          1
        </td>
        <td
          class="c4 c5"
        >
          Platform 
          1
        </td>
        <td
          class="c4 c5"
        >
          10,000
        </td>
        <td
          class="c4 c5"
        >
          1,000 NTD
        </td>
        <td
          class="c4 c5"
        >
          Action
        </td>
      </tr>
      <tr
        class="c2"
      >
        <td
          class="c4 c5"
        >
          Name 
          2
        </td>
        <td
          class="c4 c5"
        >
          Platform 
          2
        </td>
        <td
          class="c4 c5"
        >
          10,000
        </td>
        <td
          class="c4 c5"
        >
          1,000 NTD
        </td>
        <td
          class="c4 c5"
        >
          Action
        </td>
      </tr>
      <tr
        class="c2"
      >
        <td
          class="c4 c5"
        >
          Name 
          3
        </td>
        <td
          class="c4 c5"
        >
          Platform 
          3
        </td>
        <td
          class="c4 c5"
        >
          10,000
        </td>
        <td
          class="c4 c5"
        >
          1,000 NTD
        </td>
        <td
          class="c4 c5"
        >
          Action
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table should render table correctly with header and footer 1`] = `
.c5 {
  background-color: #fbfbfd;
  color: #283040;
  font-weight: bold;
  height: 56px;
  padding: 0.5rem 0.75rem;
  border: none;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: -1px;
  width: 30px;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7 {
  background-color: #ffffff;
  height: 56px;
  padding: 0.5rem 0.75rem;
  border: none;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: -1px;
  width: 30px;
  pointer-events: none;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4 {
  border-top: none;
}

.c4:last-child > .c6 {
  border-bottom: none;
}

.c3 {
  display: table;
  width: 100%;
  margin-bottom: 1px;
  overflow: auto;
  border-spacing: 0;
  border-collapse: separate;
  border-style: hidden;
  background-color: #ffffff;
  font-size: 1rem;
}

.c3 > tbody > tr:hover > td {
  background-color: #f6f8fb;
}

.c2 {
  position: relative;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: auto;
  border-radius: 1rem;
  background-color: #ffffff;
  width: 100%;
  text-align: center;
}

.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: hidden;
  border-radius: 1rem;
  background-color: #ffffff;
  box-shadow: 0 2px 4px 0 #C4CFDD;
  width: 100%;
}

.c0 .c1 {
  width: 100%;
  border-radius: 0;
  border-top: 1px solid #c4cfdd;
  border-bottom: 1px solid #c4cfdd;
}

<div
  class="c0"
  width="100%"
>
  Header
  <div
    class="c1 c2"
    width="100%"
  >
    <table
      class="c3"
    >
      <thead>
        <tr
          class="c4"
        >
          <th
            class="c5"
          >
            Name
          </th>
          <th
            class="c5"
          >
            Platform
          </th>
          <th
            class="c5"
          >
            People
          </th>
          <th
            class="c5"
          >
            Ammount
          </th>
          <th
            class="c5"
          >
            Action
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="c4"
        >
          <td
            class="c6 c7"
          >
            Name 
            1
          </td>
          <td
            class="c6 c7"
          >
            Platform 
            1
          </td>
          <td
            class="c6 c7"
          >
            10,000
          </td>
          <td
            class="c6 c7"
          >
            1,000 NTD
          </td>
          <td
            class="c6 c7"
          >
            Action
          </td>
        </tr>
        <tr
          class="c4"
        >
          <td
            class="c6 c7"
          >
            Name 
            2
          </td>
          <td
            class="c6 c7"
          >
            Platform 
            2
          </td>
          <td
            class="c6 c7"
          >
            10,000
          </td>
          <td
            class="c6 c7"
          >
            1,000 NTD
          </td>
          <td
            class="c6 c7"
          >
            Action
          </td>
        </tr>
        <tr
          class="c4"
        >
          <td
            class="c6 c7"
          >
            Name 
            3
          </td>
          <td
            class="c6 c7"
          >
            Platform 
            3
          </td>
          <td
            class="c6 c7"
          >
            10,000
          </td>
          <td
            class="c6 c7"
          >
            1,000 NTD
          </td>
          <td
            class="c6 c7"
          >
            Action
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  Footer
</div>
`;
